nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/my-certs"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  name: echoapp-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: echoapp.corp.cloudtechrocks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoapp-service
            port:
              number: 80
  tls:
  - hosts:
    - echoapp.corp.cloudtechrocks.com
    secretName: my-certs
